<resources>
    <string name="app_name">RONGS Cafe</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">MinRong XU</string>
    <string name="nav_header_subtitle" translatable="false">C109118142@nkust.edu.tw</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_login" translatable="false">Login</string>
    <string name="menu_about">關於 RONGs CAFE</string>
    <string name="menu_card">我的會員卡</string>
    <string name="menu_order">線上點餐</string>
    <string name="menu_money">我的儲值金</string>
    <string name="menu_record">消費紀錄</string>
    <string name="menu_post">活動公告</string>
    <string name="menu_search">搜尋 RONGs CAFE</string>
    <string name="menu_mail">聯絡 RONGs CAFE</string>
    <string name="menu_map">RONGs CAFE 位置</string>

    <string name="under_about">關於</string>
    <string name="under_order">線上點餐</string>
    <string name="under_record">消費紀錄</string>
    <string name="under_post">活動公告</string>
    <string name="under_map">位置</string>

    <string name="login">登入</string>
    <string name="aboutrong">位於小港國際機場跑道旁，對於航空迷來說，是個觀看飛機起降最好的地點，有寬廣的視野，觀看飛機的同時，可以點個咖啡、飲料及餐點，就可以很放鬆的待一整天。\n\n\n地址：高雄市小港區明聖街135巷10弄\n\n電話：0978-886-356\n\n營業時間：08：00 - 23：00</string>
    <string name="addnow">立即儲值</string>
    <string name="searchrong">搜尋 RONG</string>
    <string name="menumber">會員編號：178859958501</string>
    <string name="bonuspoints">紅利點數</string>
    <string name="point">點</string>

    <string name="search" translatable="false">聯絡 Rong</string>

    <string-array name="data">
        <item>我是咖啡</item>
        <item>我是茶</item>
        <item>我是奶類</item>
        <item>我是氣泡飲</item>
        <item>我很好吃</item>
        <item>我很好片</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="dialog_fire_missiles" translatable="false">Fire missiles?</string>
    <string name="fire" translatable="false">Fire</string>
    <string name="cancel">取消</string>
    <string name="ok">確定</string>
    <string name="clear">清除</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="newusername">創立新帳號</string>
    <string name="addvalue_text">每次最低儲值 NT $100，最多儲值 NT $10,000</string>
    <string name="addvalue_btn">儲值</string>
    <string name="newuser_email">請輸入信箱帳號</string>
    <string name="newuser_pw">請輸入密碼</string>
    <string name="newuser_pwa">請再次確認密碼</string>
    <string name="newuser_day">請選擇出生年月日</string>
    <string name="olduser">帳號</string>
    <string name="oldpw">密碼</string>

    <string name="nav_order">線上購物</string>
    <string name="nav_card">我的會員卡</string>
    <string name="nav_money">我的儲值金</string>
    <string name="nav_record">消費紀錄</string>
    <string name="nav_search">尋找RONG</string>
    <string name="nav_mail">聯絡RONG</string>
    <string name="nav_signout">登出</string>
    <string name="shop">分店資訊</string>
    <string name="suggestionbox">意見箱</string>
    <string name="navsignout">登出</string>
    <string name="nav_power">充電</string>


</resources>