<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:src="@drawable/new_dialog"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/newuser_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:autofillHints=""
        android:fontFamily="sans-serif"
        android:hint="@string/newuser_pw"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/password_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:autofillHints=""
        android:fontFamily="sans-serif"
        android:hint="@string/newuser_pwa"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:text="@string/newuser_day"
        android:textSize="18dp"/>

    <DatePicker
        android:layout_width="270dp"
        android:layout_height="360dp"
        android:id="@+id/datePicker"
        android:layout_gravity="center_horizontal"
        android:calendarViewShown="false"
        android:layout_marginTop="20dp"
        android:foregroundGravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="250dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/insert"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:text="@string/ok" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>